--- a/components/store/com.rarefrostbites.10.ya_ea.html
+++ b/components/store/com.rarefrostbites.10.ya_ea.html
@@ -54,8 +54,7 @@
 <div class="pps">
     <div class="pps-h" style="max-width: 1430px;">
         <div class="pps-s" style="min-width: 320px; align-items: normal;">
-            <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="320" data-show-text="false">
-                <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
+            <div class="fb-video" data-href="https://www.facebook.com/watch/?v=808457726409849" data-width="320" data-show-text="false"><blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
 
                 Get it now
                 RFB Store: https://rarefrostbites.github.io/store/Ya_Ea
@@ -79,8 +78,7 @@
                 
                 #RareFrostbites
                 #RareFrostbites_Texture_Packs
-                #Ya_Ea</p>Nai-post ni <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> noong Huwebes, Pebrero 11, 2021</blockquote>
-            </div>
+                #Ya_Ea</p>Posted by <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> on Thursday, February 11, 2021</blockquote></div>
         </div>
 
         <div class="pps-s" style="min-width: 360px;">
@@ -135,7 +133,7 @@
                         <div class="genres_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i-Chinese></h6>
+                                    <h5 data-genres_i-Chinese></h5>
                                 </div>
                             </div>
 
@@ -145,7 +143,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i->NA</h6>
+                                    <h5 data-genres_i->NA</h5>
                                 </div>
                             </div> -->
                         </div>
@@ -158,7 +156,7 @@
                         <div class="players_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-players_i->NA</h6>
+                                    <h5 data-players_i->NA</h5>
                                 </div>
                             </div>
 
@@ -168,7 +166,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-players_i->NA</h6>
+                                    <h5 data-players_i->NA</h5>
                                 </div>
                             </div>
                         </div>
