--- a/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -13,7 +13,7 @@
 
     <div class="ph s">
         <div class="tt">
-            <h2 data->RareChristmas Bundle</h2>
+            <h2 data-pt></h2>
         </div>
         <div class="pa">
             <a href="/store/@rarefrostbites">
@@ -52,51 +52,34 @@
 </div>
 
 <div class="pps">
-    <div class="pps-h" style="max-width: 1430px;">
+    <div class="pps-h" style="max-width: 320px;">
         <div class="pps-s" style="min-width: 320px; align-items: normal;">
-            <div class="fb-video" data-href="https://www.facebook.com/RareFrostbites/videos/808457726409849/" data-width="320" data-show-text="false">
-                <blockquote cite="https://www.facebook.com/RareFrostbites/videos/808457726409849/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/808457726409849/">Ya Ea - Texture Pack Trailer</a><p>Get peace, drink cup of tea under the Temple, see the skies, the sun is flowing on you. Costumize yourself into Chinese adventure.
+            <div class="fb-video" data-href="https://www.facebook.com/watch/?v=789572008697322" data-width="320" data-show-text="false"><blockquote cite="https://www.facebook.com/RareFrostbites/videos/789572008697322/" class="fb-xfbml-parse-ignore" style="opacity: 0%;"><a href="https://www.facebook.com/RareFrostbites/videos/789572008697322/">RareChristmas Bundle - Skin Pack Trailer</a><p>It&#039;s Christmas now! Go outside and meet new friends on Minecraft! Get the Skin Pack now and make your Christmas Day!
 
                 Get it now
-                RFB Store: https://rarefrostbites.github.io/store/Ya_Ea
+                RFB Store: https://rarefrostbites.github.io/store/RareChristmas_Bundle
                 
                 Trailer by PhilMinecraft: https://fb.me/PhilMinecraft.3
                 
-                ⚠️READ RULES AND REGULATIONS⚠️(inside the file)
+                ⚠️READ RULES AND REGULATIONS⚠️(on the Map file)
                 
                 Credits to the Music: ▶▶▶
-                Music: secret information
-                Artist: ninja brain
-                Link: https://youtu.be/p4Q3RSXhGUI
-                
-                Credit to Owner:
-                This Texture Pack is made by Dmonster, a dedicated Frostbits that he made a first Texture Pack for us.
-                Profile: https://fb.com/dmonster.pithwa
+                Music: Christmas Is Here
+                Artist: MorningLightMusic
+                Link: https://youtu.be/mng4p8yWFjs
                 
                 Contact Us:
-                •[Gmail] - rarefrostbitesteam&#064;gmail.com
-                •[Outlook] - rarefrostbitesteam&#064;outlook.com
+                • Gmail - rarefrostbitesteam&#064;gmail.com
+                • Outlook - rarefrostbitesteam&#064;outlook.com
                 
                 #RareFrostbites
-                #RareFrostbites_Texture_Packs
-                #Ya_Ea</p>Nai-post ni <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> noong Huwebes, Pebrero 11, 2021</blockquote>
-            </div>
-        </div>
-
-        <div class="pps-s" style="min-width: 360px;">
-            <img src="/media/store/com.rarefrostbites.10.ya_ea/1.jpg" alt="">
-        </div>
-
-        <div class="pps-s" style="min-width: 360px;">
-            <img src="/media/store/com.rarefrostbites.10.ya_ea/2.jpg" alt="">
-        </div>
-
-        <div class="pps-s" style="min-width: 360px;">
-            <img src="/media/store/com.rarefrostbites.10.ya_ea/3.jpg" alt="">
+                #RareFrostbites_Skin_Packs
+                #RareChristmas_Bundle</p>Posted by <a href="https://www.facebook.com/RareFrostbites/">RareFrostbites Team</a> on Monday, June 20, 2022</blockquote></div>
         </div>
     </div>
 </div>
 
+<!-- Pack Information -->
 <div class="pi-b1">
     <div class="pi-b2">
         <div class="pi-b3">
@@ -115,7 +98,7 @@
                         <div class="tags_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-tags_i-Pixel_Art></h6>
+                                    <h6 data-tags_i-Group></h6>
                                 </div>
                             </div>
                             
@@ -134,7 +117,7 @@
                         <div class="genres_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i-Chinese></h6>
+                                    <h5 data-genres_i-Christmas></h5>
                                 </div>
                             </div>
 
@@ -144,7 +127,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-genres_i->NA</h6>
+                                    <h5 data-genres_i->NA</h5>
                                 </div>
                             </div> -->
                         </div>
@@ -157,7 +140,7 @@
                         <div class="players_i">
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-players_i->NA</h6>
+                                    <h5 data-players_i->NA</h5>
                                 </div>
                             </div>
 
@@ -167,7 +150,7 @@
                             
                             <div class="t b1">
                                 <div class="b2">
-                                    <h6 data-players_i->NA</h6>
+                                    <h5 data-players_i->NA</h5>
                                 </div>
                             </div>
                         </div>
@@ -175,14 +158,40 @@
                 </div>
             
                 <div class="button">
-                    <button id="button" onclick="readMore()">
-                        <h2 id="show">+</h2>
+                    <button id="button-d" onclick="readMorePD()">
+                        <h2 id="show-d">+</h2>
                     </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Changelogs -->
+<!-- <div class="pi-b1">
+    <div class="pi-b2">
+        <div class="pi-b3">
+            <div class="pi-b4">
+                <div class="pi-chlgs">
+                    <h5 id="pi-chlgs-unread">WWWWWWWWWWWWWWW<br><br>
+
+                        WWWWW
+                    </h5>
+                </div>
+
+                <div class="pi-cr" id="pi-cr">
+                    <h5 onclick="readMoreCHLGS()" data->Continue reading...</h5>
+                </div>
+
+                <div class="button">
+                    <button id="button-chlgs" onclick="readMoreCHLGS()">
+                        <h2 id="show-chlgs">+</h2>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div> -->
 
 <div class="pr">
     <div class="powr-reviews" id="80ab06c0_1655038097"></div>
