--- a/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -194,5 +194,5 @@
 </div> -->
 
 <div class="pr">
-    <div class="powr-reviews" id="80ab06c0_1655038097"></div>
+    <div class="powr-reviews" id="1f998e80_1655805723"></div>
 </div>
