--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -1,25 +1,33 @@
 <div class="ps">
     <a href="#">
         <div class="pe">
-            <img src="/media/store/assets/RFB Maps.png" alt="">
+            <div class="img">
+                <img src="/media/store/assets/RFB Maps.png" alt="">
+            </div>
             <h3 data-rfbstore-filter-maps></h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
-            <img src="/media/store/assets/RFB Texture Packs.png" alt="">
+            <div class="img">
+                <img src="/media/store/assets/RFB Texture Packs.png" alt="">
+            </div>
             <h3 data-rfbstore-filter-texture_packs></h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
-            <img src="/media/store/assets/RFB Skin Packs.png" alt="">
+            <div class="img">
+                <img src="/media/store/assets/RFB Skin Packs.png" alt="">
+            </div>
             <h3 data-rfbstore-filter-skin_packs></h3>
         </div>
     </a>
     <a href="#">
         <div class="pe">
-            <img src="/media/store/assets/RFB Mash-up Packs.png" alt="">
+            <div class="img">
+                <img src="/media/store/assets/RFB Mash-up Packs.png" alt="">
+            </div>
             <h3 data-rfbstore-filter-mash-up_packs></h3>
         </div>
     </a>
