--- a/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
+++ b/components/store/com.rarefrostbites.9.rarechristmas_bundle.html
@@ -204,6 +204,108 @@
     </div>
 </div> -->
 
+<!-- Ratings -->
 <div class="pr">
     <div class="powr-reviews" id="1f998e80_1655805723"></div>
+</div>
+
+<!-- More from the author -->
+<div class="mfa">
+    <div class="an">
+        <h2>RareFrostbites Team</h2>
+    </div>
+    <div class="ps">
+        <a href="/store/com.rarefrostbites.10.ya_ea">
+            <div class="p t">
+                <div class="img">
+                    <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="">
+                </div>
+                <div class="ptp">
+                    <div class="t">
+                        <h3>RareChristmas Bundle</h3>
+                    </div>
+    
+                    <div class="pp">
+                        <h4 data-pp-f></h4>
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+        <a href="/store/com.rarefrostbites.8.1st_century">
+            <div class="p s">
+                <div class="img">
+                    <img src="/media/store/com.rarefrostbites.8.1st_century.jpg" alt="">
+                </div>
+                <div class="ptp">
+                    <div class="t">
+                        <h3>1st Century</h3>
+                    </div>
+    
+                    <div class="pp">
+                        <h4 data-pp-f></h4>
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+        <a href="/store/com.rarefrostbites.7.find_the_lever">
+            <div class="p s">
+                <div class="img">
+                    <img src="/media/store/com.rarefrostbites.7.find_the_lever.jpg" alt="">
+                </div>
+                <div class="ptp">
+                    <div class="t">
+                        <h3>Find the Lever</h3>
+                    </div>
+    
+                    <div class="pp">
+                        <h4 data-pp-f></h4>
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+        <a href="/store/com.rarefrostbites.6.halloween_endless_run">
+            <div class="p s">
+                <div class="img">
+                    <img src="/media/store/com.rarefrostbites.6.halloween_endless_run.jpg" alt="">
+                </div>
+                <div class="ptp">
+                    <div class="t">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+    
+                    <div class="pp">
+                        <h4 data-pp-f></h4>
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+        <a href="/store/com.rarefrostbites.5.halloween_bundle">
+            <div class="p s">
+                <div class="img">
+                    <img src="/media/store/com.rarefrostbites.5.halloween_bundle.jpg" alt="">
+                </div>
+                <div class="ptp">
+                    <div class="t">
+                        <h3>RareFrostbites Halloween Skin Pack Bundle</h3>
+                    </div>
+    
+                    <div class="pp">
+                        <h4 data-pp-f></h4>
+                    </div>
+                </div>
+            </div>
+        </a>
+        
+        <a href="/store/@rarefrostbites">
+            <div class="p more">
+                <div class="area">
+                    <img src="/media/store/assets/icons/white/Right.svg" alt="">
+                </div>
+            </div>
+        </a>
+    </div>
 </div>
