--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -1,107 +1,16 @@
-<div class="ps">
-    <a href="#">
-        <div class="pe">
-            <div class="img">
-                <img src="/media/store/assets/RFB Maps.png" alt="">
-            </div>
-            <h3 data-rfbstore-filter-maps></h3>
-        </div>
-    </a>
-    <a href="#">
-        <div class="pe">
-            <div class="img">
-                <img src="/media/store/assets/RFB Texture Packs.png" alt="">
-            </div>
-            <h3 data-rfbstore-filter-texture_packs></h3>
-        </div>
-    </a>
-    <a href="#">
-        <div class="pe">
-            <div class="img">
-                <img src="/media/store/assets/RFB Skin Packs.png" alt="">
-            </div>
-            <h3 data-rfbstore-filter-skin_packs></h3>
-        </div>
-    </a>
-    <a href="#">
-        <div class="pe">
-            <div class="img">
-                <img src="/media/store/assets/RFB Mash-up Packs.png" alt="">
-            </div>
-            <h3 data-rfbstore-filter-mash-up_packs></h3>
-        </div>
-    </a>
+<div class="phi">
+    <div class="img">
+        <img src="/media/store/assets/RFB Maps.png" alt="Icon image filter Map">
+    </div>
 </div>
+<hr>
 
 
 <div class="packs">
-    <a href="/store/com.rarefrostbites.10.ya_ea">
-        <div class="sel texture">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Ya Ea">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Ya Ea</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <a href="/store/com.rarefrostbites.9.rarechristmas_bundle">
-        <div class="sel skin">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="RareChristmas Bundle">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>RareChristmas Bundle</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <a href="/store/com.rarefrostbites.8.1st_century">
-        <div class="sel skin">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.8.1st_century.jpg" alt="1st Century">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>1st Century</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
     <a href="/store/com.rarefrostbites.7.find_the_lever">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/com.rarefrostbites.7.find_the_lever.jpg" alt="Find the Lever">
+                <img src="/media/store/com.rarefrostbites.7.find_the_lever.jpg" alt="Pack icon image Find the Lever">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -122,7 +31,7 @@
     <a href="/store/com.rarefrostbites.6.halloween_endless_run">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/com.rarefrostbites.6.halloween_endless_run.jpg" alt="Halloween Endless Run">
+                <img src="/media/store/com.rarefrostbites.6.halloween_endless_run.jpg" alt="Pack icon image Halloween Endless Run">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -140,31 +49,10 @@
         </div>
     </a>
     
-    <a href="/store/com.rarefrostbites.5.halloween_bundle">
-        <div class="sel skin">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.5.halloween_bundle.jpg" alt="RareFrostbites Halloween Skin Pack Bundle">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>RareFrostbites Halloween Skin Pack Bundle</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
     <a href="/store/com.rarefrostbites.4.apocalyptic_wars">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="RareFrostbites Apocalyptic Wars">
+                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="Pack icon image RareFrostbites Apocalyptic Wars">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -182,31 +70,10 @@
         </div>
     </a>
     
-    <a href="/store/com.rarefrostbites.3.glitched">
-        <div class="sel skin">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.3.glitched.jpg" alt="Glitched Skin Pack">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Glitched Skin Pack</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
     <a href="/store/com.rarefrostbites.2.one_block_sky_block">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/com.rarefrostbites.2.one_block_sky_block.jpg" alt="RareFrostbites One Block Sky Block">
+                <img src="/media/store/com.rarefrostbites.2.one_block_sky_block.jpg" alt="Pack icon image RareFrostbites One Block Sky Block">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -227,7 +94,7 @@
     <a href="/store/com.rarefrostbites.1.sky_world">
         <div class="sel map">
             <div class="ti">
-                <img src="/media/store/com.rarefrostbites.1.sky_world.jpg" alt="RareFrostbites Sky World">
+                <img src="/media/store/com.rarefrostbites.1.sky_world.jpg" alt="Pack icon image RareFrostbites Sky World">
             </div>
             <div class="ph">
                 <div class="pi">
@@ -244,88 +111,4 @@
             </div>
         </div>
     </a>
-
-    <!-- <a href="#">
-        <div class="sel map">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Halloween Endless Run</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <a href="#">
-        <div class="sel texture">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Halloween Endless Run</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <a href="#">
-        <div class="sel skin">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Halloween Endless Run</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a>
-    
-    <a href="#">
-        <div class="sel mash-up">
-            <div class="ti">
-                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="">
-            </div>
-            <div class="ph">
-                <div class="pi">
-                    <div class="pt">
-                        <h3>Halloween Endless Run</h3>
-                    </div>
-                    <div class="pa">
-                        <h4>RareFrostbites Team</h4>
-                    </div>
-                </div>
-                <div class="pp">
-                    <h3 data-pp-f></h3>
-                </div>
-            </div>
-        </div>
-    </a> -->
 </div>
