--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -1,75 +1,331 @@
-<div class="intro">
-  <div class="h1">
-    <h1 data-introduction>We make Packs just for you.</h1>
-  </div>
-  <div class="rfb_wordmark">
-    <img src="/media/assets/rfb_wordmark.svg" alt="RareFrostbites Typography Logo" />
-  </div>
-</div>
-<div class="packs_for_you-mobile">
-  <img
-    src="/media/index/packs_for_you.png"
-    alt="RFB Store logo with all of RareFrostbites' Packs inside"
-  />
-  <iframe src="embeds/index/circle-mobile.html" frameborder="0"></iframe>
-</div>
-
-<div class="packs_for_you-desktop">
-  <img
-    src="/media/index/packs_for_you.png"
-    alt="RFB Store logo with all of RareFrostbites' Packs inside"
-  />
-  <iframe src="embeds/index/circle-desktop.html" frameborder="0"></iframe>
-</div>
-
-<div class="rfbstore">
-  <h1 data-intro-rfbstore>We made a Store just for you</h1>
-  <div class="rfbstore_button">
-    <a href="/store"
-      ><button>
-        <h3 data-intro-rfbstore-button>Explore and Claim!</h3>
-      </button></a
-    >
-  </div>
-  <div class="rfbstore_animated-mobile">
-    <img src="/media/store/assets/rfbstore.gif" alt="Animated RFB Store logo" />
-  </div>
-
-  <div class="rfbstore_animated-desktop">
-    <img src="/media/store/assets/rfbstore.gif" alt="Animated RFB Store logo" />
-  </div>
-</div>
-
-<div class="products">
-  <h1 data-intro-products>
-    We rise, we never stop there. We make products just for you
-  </h1>
-  <div class="product-icon">
-    <div class="container-sel-bounce">
-      <a href="/store"
-        ><div class="container-sel">
-          <div class="container">
-            <div class="selection">
-              <img src="/media/store/assets/rfbstore.svg" alt="RFB Store logo" />
-              <span class="user notranslate"><h3>RFB Store</h3></span>
+<div class="ps">
+    <a href="/store/map/">
+        <div class="pe">
+            <div class="img">
+                <img src="/media/store/assets/RFB Maps.png" alt="Pack filter icon Maps">
             </div>
-          </div>
-        </div></a
-      ><br /><br />
-    </div>
-
-    <div class="container-sel-bounce">
-      <div class="container-sel">
-        <div class="container">
-          <div class="selection">
-            <img src="/media/assets/spay/Spay/Spay.svg" alt="Spay logo" />
-            <span class="user notranslate"
-              ><h3 style="margin-bottom: 5px">Spay</h3></span
-            >
-            <h6 data-soon>COMING SOON...</h6>
-          </div>
+            <h3 data-rfbstore-filter-maps></h3>
         </div>
-      </div>
-    </div>
-  </div>
+    </a>
+    <a href="/store/texture/">
+        <div class="pe">
+            <div class="img">
+                <img src="/media/store/assets/RFB Texture Packs.png" alt="Pack filter icon Texture Packs">
+            </div>
+            <h3 data-rfbstore-filter-texture_packs></h3>
+        </div>
+    </a>
+    <a href="/store/skin/">
+        <div class="pe">
+            <div class="img">
+                <img src="/media/store/assets/RFB Skin Packs.png" alt="Pack filter icon Skin Packs">
+            </div>
+            <h3 data-rfbstore-filter-skin_packs></h3>
+        </div>
+    </a>
+    <a href="/store/mash-up/">
+        <div class="pe">
+            <div class="img">
+                <img src="/media/store/assets/RFB Mash-up Packs.png" alt="Pack filter icon Mash-up Packs">
+            </div>
+            <h3 data-rfbstore-filter-mash-up_packs></h3>
+        </div>
+    </a>
+</div>
+
+
+<div class="packs">
+    <a href="/store/com.rarefrostbites.10.ya_ea">
+        <div class="sel texture">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Pack icon image Ya Ea">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Ya Ea</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.9.rarechristmas_bundle">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="Pack icon image RareChristmas Bundle">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareChristmas Bundle</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.8.1st_century">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.8.1st_century.jpg" alt="Pack icon image 1st Century">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>1st Century</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.7.find_the_lever">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.7.find_the_lever.jpg" alt="Pack icon image Find the Lever">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Find the Lever</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.6.halloween_endless_run">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.6.halloween_endless_run.jpg" alt="Pack icon image Halloween Endless Run">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.5.halloween_bundle">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.5.halloween_bundle.jpg" alt="Pack icon image RareFrostbites Halloween Skin Pack Bundle">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Halloween Skin Pack Bundle</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.4.apocalyptic_wars">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="Pack icon image RareFrostbites Apocalyptic Wars">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Apocalyptic Wars</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.3.glitched">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.3.glitched.jpg" alt="Pack icon image Glitched Skin Pack">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Glitched Skin Pack</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.2.one_block_sky_block">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.2.one_block_sky_block.jpg" alt="Pack icon image RareFrostbites One Block Sky Block">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites One Block Sky Block</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.1.sky_world">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.1.sky_world.jpg" alt="Pack icon image RareFrostbites Sky World">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Sky World</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+
+    <!-- <a href="#">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.4.apocalyptic_wars.jpg" alt="Pack icon image ">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="#">
+        <div class="sel texture">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Pack icon image ">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="#">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.9.rarechristmas_bundle.jpg" alt="Pack icon image ">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="#">
+        <div class="sel mash-up">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.10.ya_ea.jpg" alt="Pack icon image ">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Halloween Endless Run</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a> -->
 </div>
