--- a/styles/store/pack/content.css
+++ b/styles/store/pack/content.css
@@ -353,7 +353,7 @@
     height: 210px;
     margin-right: auto;
     margin-left: auto;
-    overflow-x: scroll;
+    overflow-x: auto;
     align-items: center;
 }
 
