--- a/components/store/map/content.html
+++ b/components/store/map/content.html
@@ -7,6 +7,48 @@
 
 
 <div class="packs">
+    <a href="/store/com.rarefrostbites.15.survival_grounds">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.15.survival_grounds.jpg" alt="Pack icon image RareFrostbites Survival Grounds">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Survival Grounds</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.14.horse_race">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.14.horse_race.jpg" alt="Pack icon image Horse Race: Ice Edition">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Horse Race: Ice Edition</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
     <a href="/store/com.rarefrostbites.7.find_the_lever">
         <div class="sel map">
             <div class="ti">
