--- a/components/store/index/content.html
+++ b/components/store/index/content.html
@@ -35,6 +35,111 @@
 
 
 <div class="packs">
+    <a href="/store/com.rarefrostbites.15.survival_grounds">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.15.survival_grounds.jpg" alt="Pack icon image RareFrostbites Survival Grounds">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>RareFrostbites Survival Grounds</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.14.horse_race">
+        <div class="sel map">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.14.horse_race.jpg" alt="Pack icon image Horse Race: Ice Edition">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Horse Race: Ice Edition</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.13.funny">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.13.funny.jpg" alt="Pack icon image Funny Bundles">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Funny Bundles</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.12.instagrama_world">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.12.instagrama_world.jpg" alt="Pack icon image Instagram-a World">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Instagram-a World</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.11.looking_good">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.11.looking_good.jpg" alt="Pack icon image Looking Good">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Looking Good</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
     <a href="/store/com.rarefrostbites.10.ya_ea">
         <div class="sel texture">
             <div class="ti">
