--- a/components/store/skin/content.html
+++ b/components/store/skin/content.html
@@ -7,6 +7,70 @@
 
 
 <div class="packs">
+    
+    <a href="/store/com.rarefrostbites.13.funny">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.13.funny.jpg" alt="Pack icon image Funny Bundles">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Funny Bundles</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.12.instagrama_world">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.12.instagrama_world.jpg" alt="Pack icon image Instagram-a World">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Instagram-a World</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
+    <a href="/store/com.rarefrostbites.11.looking_good">
+        <div class="sel skin">
+            <div class="ti">
+                <img src="/media/store/com.rarefrostbites.11.looking_good.jpg" alt="Pack icon image Looking Good">
+            </div>
+            <div class="ph">
+                <div class="pi">
+                    <div class="pt">
+                        <h3>Looking Good</h3>
+                    </div>
+                    <div class="pa">
+                        <h4>RareFrostbites Team</h4>
+                    </div>
+                </div>
+                <div class="pp">
+                    <h3 data-pp-f></h3>
+                </div>
+            </div>
+        </div>
+    </a>
+    
     <a href="/store/com.rarefrostbites.9.rarechristmas_bundle">
         <div class="sel skin">
             <div class="ti">
