--- a/styles/store/skin/content.css
+++ b/styles/store/skin/content.css
@@ -216,7 +216,7 @@ hr {
 }
 
 .body .content .packs a .sel.skin:hover .ph {
-    background-color: #045400d8;
+    background-color: #045400;
 }
 
 
