--- a/components/assets/footer.html
+++ b/components/assets/footer.html
@@ -104,6 +104,17 @@
         </a>
       </div>
     </div>
+    
+    <div class="image-bounce">
+      <div class="image">
+        <a href="https://m.me/j/AbZFwEjJkAv1Lkp0/" target="_blank">
+          <img
+            src="/media/assets/social_media/messenger.svg"
+            alt="WhatsApp logo"
+          />
+        </a>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -124,7 +135,7 @@
     </div>
 
     <div class="selection" id="selection">
-      <div class="select" style="margin-top: 0px">
+      <div class="select">
         <a href="?lang=zh-cn">
           <img src="https://flagcdn.com/cn.svg" width="30" alt="China" />
           <h5>
@@ -244,7 +255,7 @@
           </h5>
         </a>
       </div>
-      <div class="select" style="margin-bottom: 0px">
+      <div class="select">
         <a href="?lang=vi-vn">
           <img src="https://flagcdn.com/vn.svg" width="30" alt="Vietnam" />
           <h5>
