--- a/components/assets/header.html
+++ b/components/assets/header.html
@@ -17,7 +17,7 @@
   <a href="/">
     <div class="desktop-logo">
       <picture>
-        <source srcset="/media/assets/rfb_logowithwordmark.svg" media="(min-width: 1336px)" width="182px">
+        <source srcset="/media/assets/rfb_logowithwordmark-mockup_landscape.svg" media="(min-width: 1336px)" width="182px">
         
         <img src="/media/assets/rfb.svg" alt="RareFrostbites Logo" width="35px">
       </picture>
@@ -32,18 +32,18 @@
       <a href="/privacy-policy/" style="margin-right: 5px;"><h2 data-privacy-policy>Privacy Policy</h3></a>
     </div>
   </div>
-  <div class="mobile-products" onclick="openProducts()">
+  <div class="mobile-products">
     <div class="mobile-products-open-bounce">
-      <div class="mobile-products-open">
+      <div class="mobile-products-open" onclick="openProducts()">
         <div class="products">
           <img src="/media/assets/icons/outlined/white/Apps.svg" alt="Apps">
         </div>
       </div>
     </div>
   </div>
-  <div class="desktop-products" onclick="openProducts()">
+  <div class="desktop-products">
     <div class="desktop-products-open-bounce">
-      <div class="desktop-products-open">
+      <div class="desktop-products-open" onclick="openProducts()">
         <div class="products">
           <img src="/media/assets/icons/outlined/white/Apps.svg" alt="Apps">
         </div>
