--- a/styles/store/pack/content.css
+++ b/styles/store/pack/content.css
@@ -669,7 +669,7 @@
     border: 3px #c6c6c6 solid;
 }
 
-.pi-b1 .pi-b2 .pi-b3 .pi-b4, .chlgs-b1 .chlgs-b2 .chlgs-b3 {
+.pi-b1 .pi-b2 .pi-b3 .pi-b4, .chlgs-b1 .chlgs-b2 .chlgs-b3 .chlgs-b4 {
     height: auto;
     padding: 5px;
     background-color: #010101;
