--- a/styles/assets/fonts.css
+++ b/styles/assets/fonts.css
@@ -1,12 +1,12 @@
 @font-face {
   src: url("/fonts/Minecraft-Regular.ttf") format('truetype');
   font-family: Mojangles;
-  font-display: fallback;
+  font-display: block;
 }
 @font-face {
   src: url("/fonts/Minecraft-Ten.woff2");
   font-family: MC10;
-  font-display: fallback;
+  font-display: block;
 }
 
 
@@ -14,7 +14,7 @@
 @font-face {
   src: url("/fonts/Unifont.woff2");
   font-family: Unicode;
-  font-display: fallback;
+  font-display: block;
 }
 
 
@@ -26,7 +26,7 @@
 @font-face {
   src: url("/fonts/ru_ru/18VAG Rounded M Normal.ttf") format('truetype');
   font-family: VAGRoundedM;
-  font-display: fallback;
+  font-display: block;
 }
 
 
@@ -34,5 +34,5 @@
 @font-face {
   src: url("/fonts/ru_ru/18VAG Rounded M Bold.ttf") format('truetype');
   font-family: VAGRoundedB;
-  font-display: fallback;
+  font-display: block;
 }
